--- a/app/src/viewcontrols/home/home.vc.html
+++ b/app/src/viewcontrols/home/home.vc.html
@@ -1,9 +1,13 @@
 <h1>Readit</h1>
 
 <plat-foreach plat-context='posts'>
+   
   <h2>{{author}}</h2>
    <h4>{{title}}<h4>
-   <h5>{{url}}</h5>
+   <plat-link plat-options='isUrl'>{{url}}</plat-link>
+   <br>
+   <plat-image  src="{{thumbnail}}"></plat-image>
+   <br>
    <plat-button plat-tap='readMore(id)'>Read More</plat-button>
    <br>
    <br>
