--- a/app/src/viewcontrols/singlepost/singlepost.vc.html
+++ b/app/src/viewcontrols/singlepost/singlepost.vc.html
@@ -1,5 +1,7 @@
 <h1>Readit</h1>
-<h2>{{author}}</h2> 
-<h4>{{title}}</h4>
-<h5>{{url}}</h5>   
-</plat-foreach>
+  <h2>{{author}}</h2>
+   <h4>{{title}}<h4>
+   <plat-link plat-options='isUrl'>{{url}}</plat-link>
+   <br>
+   <br>
+   <plat-image  src="{{thumbnail}}"></plat-image>
