--- a/app/src/viewcontrols/home/home.vc.html
+++ b/app/src/viewcontrols/home/home.vc.html
@@ -4,7 +4,8 @@
    
   <h2>{{author}}</h2>
    <h4>{{title}}<h4>
-   <plat-link plat-options='isUrl'>{{url}}</plat-link>
+   <!--<plat-link plat-options='isUrl' src='{{ url }}'>{{url}}</plat-link>-->
+   <a href="{{url}}">{{url}}</a>
    <br>
    <plat-image  src="{{thumbnail}}"></plat-image>
    <br>
