--- a/app/src/viewcontrols/home/home.vc.html
+++ b/app/src/viewcontrols/home/home.vc.html
@@ -1,15 +1,18 @@
 <h1>Readit</h1>
 
-<plat-foreach plat-context='posts'>
-   
+<plat-foreach  plat-context='posts'>
+ <div class="style"> 
   <h2>{{author}}</h2>
    <h4>{{title}}<h4>
    <!--<plat-link plat-options='isUrl' src='{{ url }}'>{{url}}</plat-link>-->
    <a href="{{url}}">{{url}}</a>
    <br>
+   <br>
    <plat-image  src="{{thumbnail}}"></plat-image>
+   <br>
    <br>
    <plat-button plat-tap='readMore(id)'>Read More</plat-button>
    <br>
    <br>
+ </div>  
 </plat-foreach>
