--- a/app/src/viewcontrols/singlepost/singlepost.vc.html
+++ b/app/src/viewcontrols/singlepost/singlepost.vc.html
@@ -1,7 +1,8 @@
 <h1>Readit</h1>
   <h2>{{author}}</h2>
    <h4>{{title}}<h4>
-   <plat-link plat-options='isUrl'>{{url}}</plat-link>
+   <!--<plat-link plat-options='isUrl'>{{url}}</plat-link>-->
+   <a href="{{url}}">{{url}}</a>
    <br>
    <br>
    <plat-image  src="{{thumbnail}}"></plat-image>
