--- a/app/src/viewcontrols/home/home.vc.html
+++ b/app/src/viewcontrols/home/home.vc.html
@@ -11,7 +11,7 @@
    <plat-image  src="{{thumbnail}}"></plat-image>
    <br>
    <br>
-   <plat-button plat-tap='readMore(id)'>Read More</plat-button>
+   <plat-button class='button' plat-tap='readMore(id)'>Read More</plat-button>
    <br>
    <br>
  </div>  
